--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Planetas</string>
-    <string name="planeta">Planetas</string>
-    <string name="descrip"><u>Descripción</u></string>
+    <string name="app_name">Actividad_7</string>
+
 </resources>
